Fixed Bug 25317 - Team view shows misaligned appointment spaces

--- a/ui/apps/io.ox/calendar/month/style.css
+++ b/ui/apps/io.ox/calendar/month/style.css
@@ -51,7 +51,6 @@
     }
 
     .daylabel {
-        position: absolute;
         width: 100%;
         height: 26px;
         top: @weekview-toolbar-height;
